バグ修正 / 誤字修正 / 不必要なファイルを削除

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -3,3 +3,4 @@ main: jp.azisaba.main.fundrankingboard.FundRankingBoard
 version: 1.0.0
 author: siloneco
 description: "Generate ranking board of funds."
+depend: [Homos, HomoGUI]
