名前変更に対応

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -3,4 +3,4 @@ main: jp.azisaba.main.fundrankingboard.FundRankingBoard
 version: 1.0.3
 author: siloneco
 description: "Generate ranking board of funds."
-depend: [Homos, HomoGUI]
+depend: [HomoSystem, HomoGUI]
