--- a/pom.xml
+++ b/pom.xml
@@ -53,5 +53,11 @@
       <version>1.13.2-R0.1-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>net.azisaba</groupId>
+      <artifactId>HomoSystemGUI</artifactId>
+      <version>1.1.3</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 </project>
